# defendid.github.io

./: Makefile  README.md  about.html  blog.html  content_removal.html  downloads_and_checklists.html  how-it-works.html  index.html  law_enforcement_help.html  legal_assistance.html  mental_health.html  proving_deepfake.html  resources_by_audience.html  support-overview.html  tailw.html  take_it_down.html  test.html  x.html
back/: .gitignore  requirements.txt
backend/: .gitignore  Dockerfile  Makefile  README.md  api.py  app.py  application.py  db.py  models.py  pyproject.toml  run_gunicorn.sh  schema.py
backend/migrations/versions/: 6d65d951f6f1_add_relations.py  c1f3de1c45b0_.py  c453687585ef_initial_tables.py
backend/tests/: conftest.py
config/: gunicorn.service
css/: main.css
front/: Dockerfile  color_palette  default.conf  index.html  package-lock.json  package.json  resources_by_audience.html
new/: .~lock.Defend My Rep Homepage Copy.docx#  about.html  how-it-works.html  index.html  resources.html  support-law-enforcement.html  support-overview.html  suuport-for-teens.html
oldsite/: blog.html  content_removal.html  downloads_and_checklists.html  index.html  law_enforcement_help.html  legal_assistance.html  mental_health.html  proving_deepfake.html  resources_by_audience.html  take_it_down.html
pdf/: Resource for Educators.docx
site/: about.html  how-it-works.html  index.html  resources.html  support-law-enforcement.html  support-overview.html  suuport-for-teens.html
staging/: about.html  how_it_works.html  index.html  law_enforcement.html  (+2 more)
(+11 files in other folders)
